# teuthology-metrics

./: Containerfile  README.md  config.cfg  container-compose.yaml  pyproject.toml  report.py  requirements.txt  run.py  runner.py  scheduler.py  tox.ini
api/: log.py  opensearch.py  paddle.py  utils.py
deployment/: Containerfile  README.md  opensearch-compose.yaml  podman-compose.yaml
deployment/dashboard-import/: Containerfile  entrypoint.sh
report/: config.cfg  report.py  utils.py
src/: config.py  fetcher.py  ingest.py  logger.py  miner.py  processer.py  utils.py
templates/: failure_pattern_report.ndjson  failure_patterns_analysis.ndjson  failure_report.ndjson  report.j2  test_run_analysis.ndjson  test_run_result_trend.ndjson
